[gd_scene load_steps=7 format=3 uid="uid://nhokmxdn7s4k"]

[ext_resource type="Texture2D" uid="uid://cd54kpnkbffi" path="res://6/asstes/PG_ITCS-main/othersource/Pic/playerPokemons.jpg" id="1_g6y8p"]
[ext_resource type="Script" uid="uid://c340uo21mlbbb" path="res://6/Scenes/PokemonBb/pokemon_bb.gd" id="1_xa27n"]
[ext_resource type="FontFile" uid="uid://6l3rm3ckhspu" path="res://3/assets/fonts/gemunu-libre-v8-latin-700.ttf" id="2_ofs3u"]
[ext_resource type="Texture2D" uid="uid://moq1tfqyf2u2" path="res://6/asstes/PG_ITCS-main/othersource/Pic/pointerUp.png" id="4_csa4n"]

[sub_resource type="LabelSettings" id="LabelSettings_xa27n"]
font = ExtResource("2_ofs3u")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ofs3u"]
font = ExtResource("2_ofs3u")
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xa27n")

[node name="PlayerPokemons" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(578.4639, 323)
scale = Vector2(2.300987, 2.3009868)
texture = ExtResource("1_g6y8p")

[node name="MarginContainer" type="MarginContainer" parent="PlayerPokemons"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -552.35315
offset_top = -112.12581
offset_right = -259.85284
offset_bottom = -40.40029
grow_horizontal = 0
theme_override_constants/margin_left = 30

[node name="hp" type="Label" parent="PlayerPokemons/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "100/100"
label_settings = SubResource("LabelSettings_xa27n")

[node name="MarginContainer2" type="MarginContainer" parent="PlayerPokemons"]
offset_left = -52.35315
offset_top = -40.41744
offset_right = 240.13
offset_bottom = 135.1594
theme_override_constants/margin_top = 40

[node name="GridContainer" type="GridContainer" parent="PlayerPokemons/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 30
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerPokemons/MarginContainer2/GridContainer"]
layout_mode = 2

[node name="move" type="Label" parent="PlayerPokemons/MarginContainer2/GridContainer/VBoxContainer"]
layout_mode = 2
text = "寄生种子"
label_settings = SubResource("LabelSettings_ofs3u")

[node name="pp" type="Label" parent="PlayerPokemons/MarginContainer2/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "10/10"
label_settings = SubResource("LabelSettings_ofs3u")

[node name="VBoxContainer2" type="VBoxContainer" parent="PlayerPokemons/MarginContainer2/GridContainer"]
layout_mode = 2

[node name="move" type="Label" parent="PlayerPokemons/MarginContainer2/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "寄生种子"
label_settings = SubResource("LabelSettings_ofs3u")

[node name="pp" type="Label" parent="PlayerPokemons/MarginContainer2/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "10/10"
label_settings = SubResource("LabelSettings_ofs3u")

[node name="VBoxContainer3" type="VBoxContainer" parent="PlayerPokemons/MarginContainer2/GridContainer"]
layout_mode = 2

[node name="move" type="Label" parent="PlayerPokemons/MarginContainer2/GridContainer/VBoxContainer3"]
layout_mode = 2
text = "寄生种子"
label_settings = SubResource("LabelSettings_ofs3u")

[node name="pp" type="Label" parent="PlayerPokemons/MarginContainer2/GridContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "10/10"
label_settings = SubResource("LabelSettings_ofs3u")

[node name="VBoxContainer4" type="VBoxContainer" parent="PlayerPokemons/MarginContainer2/GridContainer"]
layout_mode = 2

[node name="move" type="Label" parent="PlayerPokemons/MarginContainer2/GridContainer/VBoxContainer4"]
layout_mode = 2
text = "寄生种子"
label_settings = SubResource("LabelSettings_ofs3u")

[node name="pp" type="Label" parent="PlayerPokemons/MarginContainer2/GridContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
text = "10/10"
label_settings = SubResource("LabelSettings_ofs3u")

[node name="MarginContainer3" type="MarginContainer" parent="PlayerPokemons"]
offset_left = -238.36026
offset_top = -112.1258
offset_right = -52.353165
offset_bottom = 135.15936

[node name="Marker2D" type="Marker2D" parent="PlayerPokemons/MarginContainer3"]
position = Vector2(33.463867, 42.15582)
scale = Vector2(0.29999995, 0.29999995)

[node name="Marker2D2" type="Marker2D" parent="PlayerPokemons/MarginContainer3"]
position = Vector2(122.99068, 42.15582)
scale = Vector2(0.29999995, 0.29999995)

[node name="Marker2D3" type="Marker2D" parent="PlayerPokemons/MarginContainer3"]
position = Vector2(33.463867, 125.163666)
scale = Vector2(0.29999995, 0.29999995)

[node name="Marker2D4" type="Marker2D" parent="PlayerPokemons/MarginContainer3"]
position = Vector2(122.99068, 125.16368)
scale = Vector2(0.29999995, 0.29999995)

[node name="Marker2D5" type="Marker2D" parent="PlayerPokemons/MarginContainer3"]
position = Vector2(33.463867, 209.04073)
scale = Vector2(0.29999995, 0.29999995)

[node name="Marker2D6" type="Marker2D" parent="PlayerPokemons/MarginContainer3"]
position = Vector2(122.99068, 209.04073)
scale = Vector2(0.29999995, 0.29999995)

[node name="Sprite2D" type="Sprite2D" parent="PlayerPokemons/MarginContainer3"]
texture_filter = 1
position = Vector2(37.375237, 7.8227167)
texture = ExtResource("4_csa4n")
flip_v = true

[node name="Sprite2D2" type="Sprite2D" parent="PlayerPokemons/MarginContainer3"]
visible = false
texture_filter = 1
position = Vector2(125.16364, 7.8227167)
texture = ExtResource("4_csa4n")
flip_v = true

[node name="Sprite2D3" type="Sprite2D" parent="PlayerPokemons/MarginContainer3"]
visible = false
texture_filter = 1
position = Vector2(36.506046, 90.39598)
texture = ExtResource("4_csa4n")
flip_v = true

[node name="Sprite2D4" type="Sprite2D" parent="PlayerPokemons/MarginContainer3"]
visible = false
texture_filter = 1
position = Vector2(125.59824, 90.39599)
texture = ExtResource("4_csa4n")
flip_v = true

[node name="Sprite2D5" type="Sprite2D" parent="PlayerPokemons/MarginContainer3"]
visible = false
texture_filter = 1
position = Vector2(36.07145, 175.57683)
texture = ExtResource("4_csa4n")
flip_v = true

[node name="Sprite2D6" type="Sprite2D" parent="PlayerPokemons/MarginContainer3"]
visible = false
texture_filter = 1
position = Vector2(125.59824, 175.57683)
texture = ExtResource("4_csa4n")
flip_v = true
